<resources>
    <string name="app_name">IIPO Performance</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Настройки</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="laboratory">Лабораторная</string>
    <string name="lecture">Лекция</string>
    <string name="seminar">Семинар</string>
    <string name="credit">Зачет</string>
    <string name="exam">Экзамен</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="title">Заголовок</string>
</resources>
